# project_InformationScienceandCH

./: README.md  dd_entities_XSLT.xslt  dylanDog.xml  index.html  pyproject.toml  scrapeScript.py  xml_to_html_python.py  xml_to_rdf.py  zoom-page.html
data/: dylan dog (fumetto)_wikipedia.txt  dylan dog_wikipedia.txt
html/: Dylan Dog Ontology.html  dylanDog_py.html  zoom-page.html
ontology/: DDOntology.rdf  DDOntology.ttl
python_scripts/: main.py  xml_to_html_python.py  xml_to_rdf.py
rdf_dataset/: dataset_dylandog.ttl
script/: script.js
style/: dylan_dog_theme.css  style.css
xml/: dylanDog_TEI.xml
xslt/: dd_XSLT.xslt  dd_entities_XSLT.xslt
yED_files/: DDConceptualModel_final.graphml  DDTheroteicalModel_final.graphml
