[project]
name = "project-infomationscienceandch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lxml>=6.1.1",
    "nltk>=3.9.4",
    "pip>=26.1.2",
    "rdflib>=7.6.0",
    "spacy>=3.8.13",
    "spacytextblob>=5.1.0",
    "wikipedia-api>=0.15.0",
]
